<resources>
    <string name="app_name">MyDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_batch_upload_folders">batch upload folders</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="pic_album_all">All Pictures</string>

    <string name="menu_gallery_sort_by_name">Sort by name</string>
    <string name="menu_gallery_sort_by_time">Sort by time</string>
    <string name="menu_gallery_upload">Upload photos</string>
    <string name="menu_gallery_setup_ftp">Setup FTP server</string>
    <string name="menu_gallery_upload_folder">Add folder to batch upload</string>
    <string name="menu_gallery_do_not_upload_folder">Remove folder from batch upload</string>
    <string name="menu_gallery_start_batch_upload">Start batch upload</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ftp_server_ip">FTP server IP</string>
    <string name="port">port</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="save">save</string>
    <string name="correct_ip_address">Please correct IP address.</string>
    <string name="please_setup_ftp_server">Please setup FTP server.</string>
    <string name="ftp_login_failed">FTP server login failed.</string>
    <string name="editing">Editing ...</string>
    <string name="remove_from_batch">Remove</string>



    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main22">Main2Activity2</string>
    <string name="title_activity_my_test">MyTest</string>

    <string name="cancel">Cancel</string>
</resources>